# UFMO

./: .gitignore  CMakeLists.txt
engine/: CMakeLists.txt  sourcelist.cmake
engine/include/engine/: engine.h  vk_descriptors.h  vk_types.h
engine/src/: defines.h  engine.cpp  hello.cpp  vk_descriptors.cpp  vk_initializers.cpp  vk_initializers.h  vk_pipelines.cpp  vk_pipelines.h
testapp/: CMakeLists.txt  main.cpp
